test/expected/explain_uc32.out
explain unsigned char32_t x
                 ^
18: error: "unsigned char32_t" is illegal for built-in type
